sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
var debut:int=0
var fin:int= getNombreValeurs()-2
	do{ 
		for(i<-debut to fin by 1 ){
			if(plusPetit(i+1,i){
				echange(i,i+1)
				fin=fin+1
			
			}
		}
		for(i<-fin to debut by -1){
			if(plusPetit(i+1,i){
				echange(i,i+1)
				debut=debut+1
		}
		
	}while(swap)
}
